[NguyenDanHuy_22.05.2025] feat: add service management APIs with CRUD operations and search functionality
